--- a/landing-page-v4/package.json
+++ b/landing-page-v4/package.json
@@ -8,17 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "jquery": "^3.6.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.7",
+    "sharp": "^0.30.1",
     "sweetalert2": "^11.4.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.13",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
