--- a/landing-page-v4/package.json
+++ b/landing-page-v4/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "jquery": "^3.6.0",
-    "next": "12.0.10",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.7",
