--- a/nft/package.json
+++ b/nft/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
